Adjust height for contact box and game box as contact page was not showing correctly on 701px screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,8 +514,12 @@ input {
 
     #game-box {
         width: 40%;
-        height: 100%;
+        height: 100vh;
         opacity: 1;
+    }
+
+    .contact-box {
+        height: auto;
     }
 }
 
